solve the display overflow problem

--- a/assets/styles/desktop.css
+++ b/assets/styles/desktop.css
@@ -1,5 +1,4 @@
 ﻿body {
-  height: 100vh;
   justify-content: center;
 }
 
