--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -25,6 +25,7 @@ body {
   flex-direction: column;
   font-family: var(--outfit);
   font-size: 16px;
+  min-height: 100vh;
 }
 
 .header {
